# xsec-agent-windows

.github/workflows/: build.yml
Agent/: Cargo.toml
Agent/scripts/: install.sh
Agent/src/: alert.rs  client.rs  command.rs  hidden.rs  injection.rs  main.rs  memfeature.rs  network.rs  process.rs  protocol.rs  securitylog.rs  startup.rs  usb_control.rs  ws_client.rs
src/: baseline.rs  cache.rs  client.rs.bak  fim.rs  lineage.rs  logging.rs  malicious.rs  protocol.rs  ransomware.rs  realtime.rs  response.rs  service.rs  startup.rs  upgrade.rs  webmalware.rs  ws_client.rs  yara_scanner.rs
