[package]
name = "xsec-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = "2.5"
sysinfo = "0.34"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
local-ip-address = "0.6"
base64 = "0.21"
regex = "1"
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"], optional = true }
hmac-sha256 = "1"
hex = "0.4"
constant_time_eq = "0.3"
rand = "0.8"
once_cell = "1.19"
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[features]
default = ["network"]
network = ["reqwest"]
url = "2"
tokio-tungstenite = { version = "0.21", features = ["tokio-native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
